fixed z-index

--- a/app/src/less/main.less
+++ b/app/src/less/main.less
@@ -6,7 +6,7 @@
     left: 0px;
     right: 0px;
     bottom: 0px;
-    z-index: 999999;
+    z-index: 999999999999;
     .bg-color {
         position: absolute;
         top: 0px;
